--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,12 @@
 server {
     listen 80;
     server_name raybeststar.com www.raybeststar.com;
-
-    # HTTP 直接跳转 HTTPS
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2;
     server_name raybeststar.com www.raybeststar.com;
 
     ssl_certificate     /etc/letsencrypt/live/raybeststar.com/fullchain.pem;
@@ -17,19 +16,15 @@ server {
     index index.html;
 
     location / {
-        # SPA 前端 history 模式支持
         try_files $uri /index.html;
     }
 
     location /functions/ {
-        # 纯代理，不改请求头
         proxy_pass https://cfdzaypewnuwnhggfind.supabase.co/functions/v1/;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
+        proxy_set_header Host cfdzaypewnuwnhggfind.supabase.co;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # 不带 Authorization 头，前端自己带
     }
 }
