--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
 
 server {
     listen 443 ssl;
-    http2;
+    http2 on;
     server_name raybeststar.com www.raybeststar.com;
 
     ssl_certificate     /etc/letsencrypt/live/raybeststar.com/fullchain.pem;
